...
    <androidx.preference.PreferenceCategory
        android:key="look_toolbar"
        android:title="@string/settings_look_and_feel_toolbar_title">

        <androidx.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_extension_keyboard_enabled"
            android:key="@string/settings_key_extension_keyboard_enabled"
            android:persistent="true"
            android:summaryOff="@string/extension_keyboard_enabled_off_summary"
            android:summaryOn="@string/extension_keyboard_enabled_on_summary"
            android:title="@string/is_extesion_keyboard_above_keyboard" />

        <Preference
...
