...
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/lookAndFeelSettingsFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.LookAndFeelSettingsFragment"
        android:label="@string/settings_category_look_and_feel" >
        <deepLink
            android:id="@+id/deepLink_look_and_feel"
            app:action="android.intent.action.VIEW"
            app:uri="@string/deeplink_url_look_and_feel" />
...
    <fragment
        android:id="@+id/keyboardThemeSelectorFragment"
        android:name="wtf.uhoh.newsoftkeyboard.app.ui.settings.KeyboardThemeSelectorFragment"
        android:label="KeyboardThemeSelectorFragment">
        <action
            android:id="@+id/action_keyboardThemeSelectorFragment_to_keyboardThemeCustomizationFragment"
            app:destination="@id/keyboardThemeCustomizationFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <deepLink
            android:id="@+id/deepLink5"
...
